--- a/webapp/src/main/webapp/themes/okcjug/layout.xhtml
+++ b/webapp/src/main/webapp/themes/okcjug/layout.xhtml
@@ -53,6 +53,7 @@
                             </li>
                             <li class="page_item page-item-180"><a href="#{request.contextPath}/registration" title="Registration">Registration</a></li>
                             <li class="page_item page-item-184"><a href="#{request.contextPath}/contact-us" title="Contact Us">Contact Us</a></li>
+                            <li class="page_item page-item-184"><a href="#{request.contextPath}/admin" title="Admin">Admin</a></li>
                             <li><a class="lastmenu" href="javascript:void(0);"></a></li>
                         </ul>
 
