--- a/webapp/src/main/webapp/admin/meetings/list.xhtml
+++ b/webapp/src/main/webapp/admin/meetings/list.xhtml
@@ -13,6 +13,14 @@
                     #{meeting.name}
                 </h:column>
                 <h:column>
+                    <f:facet name="header"><h:outputText style="font-weight: bold;" value="Topic"/></f:facet>
+                    #{meeting.topic}
+                </h:column>
+                <h:column>
+                    <f:facet name="header"><h:outputText style="font-weight: bold;" value="Speaker"/></f:facet>
+                    #{meeting.speaker}
+                </h:column>
+                <h:column>
                     <f:facet name="header"><h:outputText style="font-weight: bold;" value="Date(s)"/></f:facet>
                     <h:outputText value="#{meeting.startDate}">
                         <f:convertDateTime dateStyle="medium"/>
