--- a/webapp/src/main/webapp/admin/meetings/view.xhtml
+++ b/webapp/src/main/webapp/admin/meetings/view.xhtml
@@ -12,21 +12,27 @@
                     <h:outputText value="Description"/>
                     <h:outputText id="description" value="#{meetingBean.selected.description}" title="Description" />
                     
+                    <h:outputText value="Topic"/>
+                    <h:outputText id="topic" value="#{meetingBean.selected.topic}" title="Topic" />
+
+                    <h:outputText value="Speaker"/>
+                    <h:outputText id="speaker" value="#{meetingBean.selected.speaker}" title="Speaker" />
+
                     <h:outputText value="Date(s)" />
                     <h:panelGroup>
                         <h:outputText value="#{meetingBean.selected.startDate}">
-                            <f:convertDateTime dateStyle="medium"/>
+                            <f:convertDateTime dateStyle="full"/>
                         </h:outputText>
                         &#160;
-                        <h:outputText value="#{meeting.startTime}">
+                        <h:outputText value="#{meetingBean.selected.startTime}">
                             <f:convertDateTime type="time" timeStyle="short"/>
                         </h:outputText>
                         <br/>
                         <h:outputText value="#{meetingBean.selected.endDate}">
-                            <f:convertDateTime dateStyle="medium"/>
+                            <f:convertDateTime dateStyle="full"/>
                         </h:outputText>
                         &#160;
-                        <h:outputText value="#{meeting.endTime}">
+                        <h:outputText value="#{meetingBean.selected.endTime}">
                             <f:convertDateTime type="time" timeStyle="short"/>
                         </h:outputText>
                     </h:panelGroup>
