--- a/webapp/src/main/webapp/home.xhtml
+++ b/webapp/src/main/webapp/home.xhtml
@@ -15,12 +15,24 @@
         Welcome to the online home of the Oklahoma City Java Users Group, Inc.
         <br />
         <br/>
-        The next meeting is:
+        <h3 style="width: 100%; border-bottom: 1px; border-bottom-style: solid;">Next Meeting</h3>
         <table border="0">
             <tr>
                 <td>Name:</td>
                 <td>
                     #{meetingBean.nextMeeting.name} (Register <a href="#{request.contextPath}/register.jsf?meetingId=#{meetingBean.nextMeeting.id}">here</a>)
+                </td>
+            </tr>
+            <tr>
+                <td>Topic:</td>
+                <td>
+                    #{meetingBean.nextMeeting.topic}
+                </td>
+            </tr>
+            <tr>
+                <td>Speaker:</td>
+                <td>
+                    #{meetingBean.nextMeeting.speaker}
                 </td>
             </tr>
             <tr>
@@ -40,6 +52,7 @@
                 <td><h:outputText value="#{meetingBean.nextMeeting.description}" escape="false"/></td>
             </tr>
         </table>
+        <h3 style="width: 100%; border-bottom: 1px; border-bottom-style: solid;">Blogs</h3>
     </ui:define>
 </ui:composition>
 </body>
