Start of auto admin feature.  Let's see how far this goes...

--- a/webapp/src/main/webapp/home.xhtml
+++ b/webapp/src/main/webapp/home.xhtml
@@ -8,9 +8,10 @@
     <title>Should Not Be Displayed</title>
 </head>
 <body>   <!-- template="/WEB-INF/demotemplate.xhtml" -->
-<ui:composition template="/themes/#{main.preferences['theme'].value}/layout.xhtml">
+<ui:composition id="composition" template="/themes/#{main.preferences['theme'].value}/layout.xhtml">
     <ui:define name="title">Oklahoma City Java Users Group</ui:define>
     <ui:define name="content">
+        <h:panelGroup id="marker"/>
         <h:messages layout="table"/>
         Welcome to the online home of the Oklahoma City Java Users Group, Inc.
         <br />
