Proof-of-concept for auto admin features complete.  Further efforts commencing. Meeting model clean up

--- a/webapp/src/main/webapp/autoAdmin/index.xhtml
+++ b/webapp/src/main/webapp/autoAdmin/index.xhtml
@@ -9,7 +9,7 @@
     <title>Should Not Be Displayed</title>
 </head>
 <body>   <!-- template="/WEB-INF/demotemplate.xhtml" -->
-<ui:composition id="composition" template="/themes/#{main.preferences['theme'].value}/layout.xhtml">
+<ui:composition template="/themes/#{main.preferences['theme'].value}/layout.xhtml">
     <ui:define name="title">Meetspace Auto Admin</ui:define>
     <ui:define name="content">
         <h:messages layout="table"/>
