--- a/webapp/src/main/webapp/home.xhtml
+++ b/webapp/src/main/webapp/home.xhtml
@@ -39,7 +39,7 @@
             <tr>
                 <td>Date:</td>
                 <td>
-                    <h:outputText value="#{meetingBean.nextMeeting.startDate}">
+                    <h:outputText value="#{meetingBean.nextMeeting.meetingDate}">
                         <f:convertDateTime type="date" dateStyle="full"/>
                     </h:outputText>
                 </td>
