--- a/webapp/src/main/webapp/register.xhtml
+++ b/webapp/src/main/webapp/register.xhtml
@@ -30,7 +30,7 @@
             <tr>
                 <td>Date and Time:</td>
                 <td>
-                    <h:outputText value="#{registrationBean.meeting.startDate}">
+                    <h:outputText value="#{registrationBean.meeting.meetingDate}">
                         <f:convertDateTime type="date" dateStyle="full"/>
                     </h:outputText>
                     ,
