Adding new records for a given entity seems to be working correctly now

--- a/webapp/src/main/webapp/autoAdmin/form.xhtml
+++ b/webapp/src/main/webapp/autoAdmin/form.xhtml
@@ -4,7 +4,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:ui="http://java.sun.com/jsf/facelets">
+      xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:sc="http://java.sun.com/mojarra/scales">
 <head>
     <title>Should Not Be Displayed</title>
 </head>
@@ -26,11 +27,30 @@
 
         <h1>Meetspace Auto Admin - #{autoAdminFormBean.modelClassName}</h1>
         <h:form id="autoAdminForm">
-            <h:inputHidden value="#{autoAdminFormBean.modelClassName}"/>d
-            <h:panelGrid id="autoAdminGrid" binding="#{autoAdminFormBean.panelGrid}"/>
+            <ui:remove>
+                <h:panelGrid id="autoAdminGrid" binding="#{autoAdminFormBean.panelGrid}"/>
+            </ui:remove>
+            <ui:repeat value="#{autoAdminFormBean.modelMetadata.columns}" var="cmd">
+                <h:outputText id="autoAdminForm_#{cmd.name}_label" value="#{cmd.name}" style="width: 15%; display: block; float: left;"/>
+                <ui:fragment rendered="#{cmd.primaryKey and empty autoAdminFormBean.selected.id}">
+                    <h:outputText value="#{autoAdminFormBean.model[cmd.name]}"/>
+                    <h:inputHidden value="#{autoAdminFormBean.model[cmd.name]}"/>
+                </ui:fragment>
+                <ui:fragment rendered="#{!cmd.primaryKey}">
+                    <h:inputText value="#{autoAdminFormBean.model[cmd.name]}" rendered="#{cmd.type.simpleName == 'String'}"/>
+                    <sc:dateSelector value="#{autoAdminFormBean.model[cmd.name]}" rendered="#{(cmd.type.simpleName == 'Date') and (cmd.temporalType == 'DATE')}" format="yyyy-MM-dd"/>
+                    <h:inputText value="#{autoAdminFormBean.model[cmd.name]}" rendered="#{(cmd.type.simpleName == 'Date') and (cmd.temporalType == 'TIME')}" size="9" maxlength="8">
+                        <f:convertDateTime type="date" pattern="h:mm a"/>
+                    </h:inputText>
+                    <h:inputText value="#{autoAdminFormBean.model[cmd.name]}" rendered="#{(cmd.type.simpleName == 'Date') and (cmd.temporalType == 'TIMESTAMP')}" size="19" maxlength="18">
+                        <f:convertDateTime type="date" pattern="yyyy-MM-dd HH:mm"/>
+                    </h:inputText>
+                </ui:fragment>
+                <br/>
+            </ui:repeat>
             <br/>
-            <h:commandButton action="#{autoAdminFormBean.create}" value="Add" rendered="#{empty autoAdminFormBean.selected.id}"/>
-            <h:commandButton action="#{autoAdminFormBean.edit}" value="Update" rendered="#{!empty autoAdminFormBean.selected.id}"/>
+            <h:commandButton action="#{autoAdminFormBean.create}" value="Add #{autoAdminFormBean.modelClassName}" rendered="#{empty autoAdminFormBean.selected.id}"/>
+            <h:commandButton action="#{autoAdminFormBean.edit}" value="Update #{autoAdminFormBean.modelClassName}" rendered="#{!empty autoAdminFormBean.selected.id}"/>
             <h:commandButton action="list" value="Cancel"/>
         </h:form>
     </ui:define>
